[Blog-45] add about me

--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ organization:
 organization_url: 
 github_username: jessica0530
 location: Shanghai, China
-email: 604284275@qq.com
+email: wjxdtc10530@gmail.com
 
 # ---------------- #
 #    Navigation    #
